Project

General

Profile

Actions

Bug #24550

closed

collection sequencers are not reused; delete and create collection reordered

Added by Sage Weil almost 6 years ago. Updated almost 6 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2018-06-16 07:14:32.231 7fc46c6eca00 20 bluestore(bluestore.test_temp_dir) _txc_create osr 0x560e0e26d1e0 = 0x560e12812000 seq 308
2018-06-16 07:14:32.231 7fc46c6eca00 15 bluestore(bluestore.test_temp_dir) _remove_collection 555.0_head
2018-06-16 07:14:32.231 7fc46c6eca00 20 bluestore.OnodeSpace(0x560e15aedf58 in 0x560e0f4fe380) map_any
2018-06-16 07:14:32.231 7fc46c6eca00 20 bluestore(bluestore.test_temp_dir) _collection_list range 0x7f7ffffffffffffdd300000000 to 0x7f7ffffffffffffdd3ffffffff and 0x7f800000000000022b00000000 to 0x7f800000000000022bffffffff start GHMIN
2018-06-16 07:14:32.232 7fc46c6eca00 20 bluestore(bluestore.test_temp_dir) _collection_list pend 0x7f7ffffffffffffdd3ffffffff
2018-06-16 07:14:32.232 7fc46c6eca00 20 bluestore(bluestore.test_temp_dir) _collection_list iterator not valid (end of db?)
2018-06-16 07:14:32.232 7fc46c6eca00 20 bluestore(bluestore.test_temp_dir) _collection_list iterator not valid (end of db?)
2018-06-16 07:14:32.232 7fc46c6eca00 10 bluestore(bluestore.test_temp_dir) _osr_register_zombie 0x560e0e26d1e0
2018-06-16 07:14:32.232 7fc46c6eca00 10 bluestore(bluestore.test_temp_dir) _remove_collection 555.0_head = 0
2018-06-16 07:14:32.232 7fc46c6eca00 10 bluestore(bluestore.test_temp_dir) _txc_calc_cost 0x560e12812000 cost 670142 (1 ios * 670000 + 142 bytes)
2018-06-16 07:14:32.232 7fc46c6eca00 20 bluestore(bluestore.test_temp_dir) _txc_write_nodes txc 0x560e12812000 onodes  shared_blobs 
2018-06-16 07:14:32.232 7fc46c6eca00 20 bluestore(bluestore.test_temp_dir) _txc_finalize_kv txc 0x560e12812000 allocated 0x[] released 0x[]
2018-06-16 07:14:32.232 7fc46c6eca00 10 bluestore(bluestore.test_temp_dir) _txc_state_proc txc 0x560e12812000 prepare
2018-06-16 07:14:32.232 7fc46c6eca00 20 bluestore(bluestore.test_temp_dir) _txc_finish_io 0x560e12812000
2018-06-16 07:14:32.232 7fc46c6eca00 10 bluestore(bluestore.test_temp_dir) _txc_state_proc txc 0x560e12812000 io_done
2018-06-16 07:14:32.238 7fc4277c5700 20 trim shard target 0 B ratio 0 (0 B + 0 B),  current 22 KiB (22 KiB + 0 B), need_to_free 22 KiB (22 KiB + 0 B) -> max 0 onodes + 0 buffer
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim onodes 22 / 0 buffers 0 / 0
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e14ea2fc0
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e10660480
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e38aa4900
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e1ce08480
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e1280ed80
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560eab0c2fc0
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e1b560fc0
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e16cce900
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560eaace5b00
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e1977f440
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e2c393680
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e24493d40
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e14247b00
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e38aa4240
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e324a6900
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e0f850240
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e363df440
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e12c87200
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e10660900
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e10660d80
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e14f72fc0
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim  #555:ff000000:::OBJ_510:449453e#2 has 2 refs; skipping
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim considering 0x560e0bc45200
2018-06-16 07:14:32.238 7fc4277c5700 20 bluestore.2QCache(0x560e0f4fe380) _trim  #555:ff000000:::OBJ_766:head#1 has 2 refs; skipping
2018-06-16 07:14:32.241 7fc46c6eca00 10 bluestore(bluestore.test_temp_dir) queue_transactions ch 0x560e0bf2d2c0 555.0_head
2018-06-16 07:14:32.241 7fc46c6eca00 20 bluestore(bluestore.test_temp_dir) _txc_create osr 0x560e0e0b1110 = 0x560e0fdc2000 seq 1
2018-06-16 07:14:32.241 7fc46c6eca00 15 bluestore(bluestore.test_temp_dir) _create_collection 555.0_head bits 0
2018-06-16 07:14:32.241 7fc46c6eca00 10 bluestore(bluestore.test_temp_dir) _create_collection 555.0_head bits 0 = 0
2018-06-16 07:14:32.241 7fc46c6eca00 10 bluestore(bluestore.test_temp_dir) _txc_calc_cost 0x560e0fdc2000 cost 670142 (1 ios * 670000 + 142 bytes)
2018-06-16 07:14:32.241 7fc46c6eca00 20 bluestore(bluestore.test_temp_dir) _txc_write_nodes txc 0x560e0fdc2000 onodes  shared_blobs 
2018-06-16 07:14:32.241 7fc46c6eca00 20 bluestore(bluestore.test_temp_dir) _txc_finalize_kv txc 0x560e0fdc2000 allocated 0x[] released 0x[]
2018-06-16 07:14:32.241 7fc46c6eca00 10 bluestore(bluestore.test_temp_dir) _txc_state_proc txc 0x560e0fdc2000 prepare
2018-06-16 07:14:32.241 7fc46c6eca00 20 bluestore(bluestore.test_temp_dir) _txc_finish_io 0x560e0fdc2000
2018-06-16 07:14:32.241 7fc46c6eca00 10 bluestore(bluestore.test_temp_dir) _txc_state_proc txc 0x560e0fdc2000 io_done
2018-06-16 07:14:32.263 7fc427fc6700 20 bluestore(bluestore.test_temp_dir) _kv_finalize_thread wake
2018-06-16 07:14:32.263 7fc4287c7700 20 bluestore(bluestore.test_temp_dir) _kv_sync_thread committed 0 cleaned 0 in 0.0335096s (2.5e-07s flush + 0.0335094s kv commit)
2018-06-16 07:14:32.263 7fc427fc6700 20 bluestore(bluestore.test_temp_dir) _kv_finalize_thread kv_committed <0x560e12813500>
2018-06-16 07:14:32.263 7fc427fc6700 20 bluestore(bluestore.test_temp_dir) _kv_finalize_thread deferred_stable <>
2018-06-16 07:14:32.263 7fc427fc6700 10 bluestore(bluestore.test_temp_dir) _txc_state_proc txc 0x560e12813500 kv_submitted
2018-06-16 07:14:32.263 7fc4287c7700 20 bluestore(bluestore.test_temp_dir) _kv_sync_thread committing 2 submitting 1 deferred done 0 stable 0
2018-06-16 07:14:32.263 7fc427fc6700 20 bluestore(bluestore.test_temp_dir) _txc_committed_kv txc 0x560e12813500
2018-06-16 07:14:32.263 7fc427fc6700 10 bluestore(bluestore.test_temp_dir) _txc_state_proc txc 0x560e12813500 finishing
2018-06-16 07:14:32.263 7fc427fc6700 20 bluestore(bluestore.test_temp_dir) _txc_finish 0x560e12813500 onodes 
2018-06-16 07:14:32.263 7fc427fc6700 20 bluestore(bluestore.test_temp_dir) _txc_finish  txc 0x560e12813500 done
2018-06-16 07:14:32.263 7fc427fc6700 20 bluestore(bluestore.test_temp_dir) _txc_finish  txc 0x560e12812000 kv_queued

/a/sage-2018-06-16_03:09:14-rados-wip-24319-distro-basic-smithi/2671226


Related issues 2 (0 open2 closed)

Related to bluestore - Bug #24319: ObjectStore/StoreTestSpecificAUSize.SyntheticMatrixNoCsum/2 failed fsck with stray objectsResolved05/26/2018

Actions
Copied to bluestore - Backport #24581: mimic: collection sequencers are not reused; delete and create collection reorderedResolvedSage WeilActions
Actions #1

Updated by Sage Weil almost 6 years ago

  • Status changed from 12 to Fix Under Review
Actions #2

Updated by Sage Weil almost 6 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to mimic,luminous
Actions #3

Updated by Sage Weil almost 6 years ago

  • Related to Bug #24319: ObjectStore/StoreTestSpecificAUSize.SyntheticMatrixNoCsum/2 failed fsck with stray objects added
Actions #4

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24581: mimic: collection sequencers are not reused; delete and create collection reordered added
Actions #5

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24582: luminous: collection sequencers are not reused; delete and create collection reordered added
Actions #6

Updated by Sage Weil almost 6 years ago

  • Backport changed from mimic,luminous to mimic
Actions #7

Updated by Nathan Cutler almost 6 years ago

  • Copied to deleted (Backport #24582: luminous: collection sequencers are not reused; delete and create collection reordered)
Actions #8

Updated by Nathan Cutler almost 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF